@@ -3550,6 +3550,52 @@ when "69.4.2"
   #  f.here.each{|e| puts e.join(" ")}
   f.output("test/test-66.vf")
 
+when "70", "abort"
+  
+  require "timeout"
 
+  begin
+    timeout(20) {
+#  f = fairy.input(["sample/wc/data/sample_30M.txt"]*120)
+#  f = fairy.input(["sample/wc/data/sample_30M.txt"]*120)
+      f = fairy.input(["sample/wc/data/sample_10M.txt"]*10)
+      f = f.mapf(%{|ln| begin
+                      ln.chomp.split
+		    rescue
+		      []
+		    end
+      })
+      f.output("test/test-66.vf")
+    }
+  rescue Timeout::Error
+    puts "Abort!! ..."
+    fairy.abort
+    puts "Fin"
+  end
 
+when "70.1"
+  require "timeout"
+
+  begin
+    timeout(20) {
+#  f = fairy.input(["sample/wc/data/sample_30M.txt"]*120)
+#  f = fairy.input(["sample/wc/data/sample_30M.txt"]*120)
+#  f = fairy.input(["sample/wc/data/sample_30M.txt"]*10)
+      f = fairy.input(["sample/wc/data/sample_10M.txt"]*10)
+      f = f.mapf(%{|ln| begin
+                      ln.chomp.split
+		    rescue
+		      []
+		    end
+      })
+      f = f.mod_group_by(%{|w| w})
+      f = f.map(%{|key, values| [key, values.size].join(" ")})
+      #  f.here.each{|e| puts e.join(" ")}
+      f.output("test/test-66.vf")
+    }
+  rescue Timeout::Error
+    puts "Abort!! ..."
+    fairy.abort
+    puts "Fin"
+  end
 end
